update nav animation; links

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,15 +9,14 @@
     <div class="primary-content about-item">
       <div class="bio">
         <p>
-          Hey, I'm Peter Cutler, and I'm a Master's student living in Seattle.
-          I'm currently studying <a target="_blank" class="about-body-link" href="https://www.hcde.washington.edu/ms/">
+          Hey, I'm Peter Cutler, and I'm a UX designer and developer living in Seattle. I'm also a Master's student studying <a target="_blank" class="basic-link" href="https://www.hcde.washington.edu/ms/">
           Human Centered Design & Engineering</a> at the University of
           Washington.
         </p>
         <p>
           I've worked in different tech roles for the past seven years, doing
           things like strategy, ux, design, and software engineering
-          with some great people. <a class="about-body-link" routerLink="/work">
+          with some great people. <a class="basic-link" routerLink="/work">
           You can find some of my work here</a>. Take a look and feel free to
           reach out.
         </p>
