--- a/src/app/work/work-items/uw-complex-systems/uw-complex-systems.component.html
+++ b/src/app/work/work-items/uw-complex-systems/uw-complex-systems.component.html
@@ -2,7 +2,7 @@
 
   <app-work-header>
     <p>
-      Through a unique partnership between the <a class="work-body-link" target="_blank" href="https://media.ifrc.org/">International Federation of Red Cross and Red Crescent Societies (IFRC)</a> and the University of Washington, my cohort was able to collaboratively research ways to incorporate Human-Centered principles into the <a class="work-body-link" target="_blank" href="http://www.ifrc.org/vca">Vulnerability & Capacity Assessment (VCA)</a> system.
+      Through a unique partnership between the <a class="basic-link" target="_blank" href="https://media.ifrc.org/">International Federation of Red Cross and Red Crescent Societies (IFRC)</a> and the University of Washington, my cohort was able to collaboratively research ways to incorporate Human-Centered principles into the <a class="basic-link" target="_blank" href="http://www.ifrc.org/vca">Vulnerability & Capacity Assessment (VCA)</a> system.
     </p>
     <p>
       The IFRC uses a participatory design model for its community programs like the VCA. As experts on the meeting points of technology and human-centered research & design, we collaborated with Red Cross teams to layout opportunities to better integrate technology into their participatory VCA approach.
@@ -14,10 +14,10 @@
       Building Understanding
     </h2>
     <p>
-      At the outset of this project, our first step was to recalibrate our understanding of our domain to align with <a class="work-body-link" target="_blank" href="https://media.ifrc.org/ifrc/who-we-are/fundamental-principles/">humanitarian principles</a> and with <a class="work-body-link" target="_blank" href="http://www.un.org/en/universal-declaration-human-rights/">The Universal Declaration of Human Rights</a>.
+      At the outset of this project, our first step was to recalibrate our understanding of our domain to align with <a class="basic-link" target="_blank" href="https://media.ifrc.org/ifrc/who-we-are/fundamental-principles/">humanitarian principles</a> and with <a class="basic-link" target="_blank" href="http://www.un.org/en/universal-declaration-human-rights/">The Universal Declaration of Human Rights</a>.
     </p>
     <p>
-      If you want to understand some of this task of recalibration, please takea look at <a class="work-body-link" target="_blank" href="https://www.dropbox.com/s/wixuevlkpiu27dw/2.%20mays-racadio-gugerty.mismatch%20business%20and%20humanitarian%20logistics.2012Oct.pdf?dl=0">an excellent, quick summary of contextual shifts involved</a>. Designing with a humanitarian's outlook is not always intuitive!
+      If you want to understand some of this task of recalibration, please takea look at <a class="basic-link" target="_blank" href="https://www.dropbox.com/s/wixuevlkpiu27dw/2.%20mays-racadio-gugerty.mismatch%20business%20and%20humanitarian%20logistics.2012Oct.pdf?dl=0">an excellent, quick summary of contextual shifts involved</a>. Designing with a humanitarian's outlook is not always intuitive!
     </p>
     <div class="work-body-youtube-video work-video-embed">
       <iframe
@@ -34,11 +34,11 @@
     </p>
     <ul class="work-body-list">
       <li>
-        <a class="work-body-link" target="_blank" href="https://mitpress.mit.edu/books/streetlights-and-shadows">
+        <a class="basic-link" target="_blank" href="https://mitpress.mit.edu/books/streetlights-and-shadows">
           Streetlights & Shadows</a> &mdash; Gary Klein's investigation into what it means to design in and for a complex, changing environment.
       </li>
       <li>
-        <a class="work-body-link" target="_blank" href="http://www.gurteen.com/gurteen/gurteen.nsf/id/X00052762/">
+        <a class="basic-link" target="_blank" href="http://www.gurteen.com/gurteen/gurteen.nsf/id/X00052762/">
           Information Ecology</a> &mdash; Thomas Davenport's exploration into the human-centered basis of the information we share.
       </li>
     </ul>
