--- a/src/app/work/work-items/uw-oculus-onboarding/uw-oculus-onboarding.component.html
+++ b/src/app/work/work-items/uw-oculus-onboarding/uw-oculus-onboarding.component.html
@@ -15,11 +15,11 @@
     </p>
     <ul class="work-body-list">
       <li>
-        <a class="work-body-link" target="_blank" href="https://www.tiltbrush.com/">
+        <a class="basic-link" target="_blank" href="https://www.tiltbrush.com/">
           First Contact</a> &mdash; the official on-boarding experience provided by Oculus
       </li>
       <li>
-        <a class="work-body-link" target="_blank" href="https://www.oculus.com/experiences/rift/1217155751659625/">
+        <a class="basic-link" target="_blank" href="https://www.oculus.com/experiences/rift/1217155751659625/">
           Tilt Brush</a> &mdash; a 3d design application designed for VR
       </li>
     </ul>
@@ -52,7 +52,7 @@
       Heuristic Evaluation
     </h2>
     <p>
-      We used a <a class="work-body-link" target="_blank" href="https://www.nngroup.com/articles/ten-usability-heuristics/">heuristic analysis</a> of our applications to find worthwhile avenues to explore. We focused on a few at the outset:
+      We used a <a class="basic-link" target="_blank" href="https://www.nngroup.com/articles/ten-usability-heuristics/">heuristic analysis</a> of our applications to find worthwhile avenues to explore. We focused on a few at the outset:
     </p>
     <ul class="work-body-list">
       <li>
@@ -176,7 +176,7 @@
       Presenting and Reporting Out
     </h2>
     <p>
-      To get a full look at our findings, you can review <a class="work-body-link" target="_blank" href="https://www.dropbox.com/s/j8jxp2u9y2738py/ProjectOasis-OculusRift-3-6-final.pdf?dl=0">our presentation</a> and <a class="work-body-link" target="_blank" href="https://www.dropbox.com/s/1dn8c7vbxu422ew/Oasis-Report.pdf?dl=0">our final report</a>.
+      To get a full look at our findings, you can review <a class="basic-link" target="_blank" href="https://www.dropbox.com/s/j8jxp2u9y2738py/ProjectOasis-OculusRift-3-6-final.pdf?dl=0">our presentation</a> and <a class="basic-link" target="_blank" href="https://www.dropbox.com/s/1dn8c7vbxu422ew/Oasis-Report.pdf?dl=0">our final report</a>.
     </p>
     <figure class="work-body-figure">
       <a target="_blank" href="https://www.dropbox.com/s/j8jxp2u9y2738py/ProjectOasis-OculusRift-3-6-final.pdf?dl=0">
