--- a/src/app/work/work-items/uw-secure-storage/uw-secure-storage.component.html
+++ b/src/app/work/work-items/uw-secure-storage/uw-secure-storage.component.html
@@ -15,7 +15,7 @@
     </p>
     <ul class="work-body-list">
       <li>
-        We read dozens of investigative reports and created <a class="work-body-link" target="_blank" href="https://www.evernote.com/shard/s55/sh/399d9d7c-0076-4bc3-8724-f5059f4f0e54/75be081166e1709a">notes like this one</a>, organizing opportunities that we could investigate.
+        We read dozens of investigative reports and created <a class="basic-link" target="_blank" href="https://www.evernote.com/shard/s55/sh/399d9d7c-0076-4bc3-8724-f5059f4f0e54/75be081166e1709a">notes like this one</a>, organizing opportunities that we could investigate.
       </li>
       <li>
         I discussed our project planning and our focus on storage with Barbara Poppe, an appointee by President Obama to the U.S. Interagency Council on Homelessness. She helped validate our trajectory.
@@ -55,7 +55,7 @@
       Putting Housing First
     </h3>
     <p>
-      We came to align ourselves with a budgetary concept of <a class="work-body-link" target="_blank" href="https://www.desc.org/what-we-do/housing/housing-first/">housing first</a> &mdash; the idea that the overwhelming effort of the city should be to create robust permanent housing solutions for all, rather than stop-gap measures.
+      We came to align ourselves with a budgetary concept of <a class="basic-link" target="_blank" href="https://www.desc.org/what-we-do/housing/housing-first/">housing first</a> &mdash; the idea that the overwhelming effort of the city should be to create robust permanent housing solutions for all, rather than stop-gap measures.
     </p>
     <p>
       As we progressed, we often asked ourselves, "is this solution worth more than a single permanent home?" Prioritizing "housing first," we knew our solution would have to use resources responsibly &mdash; either through a low cost or through an easy method of scaling the resources required.
