--- a/src/app/work/work-items/vox-global-brand-redesign/vox-global-brand-redesign.component.html
+++ b/src/app/work/work-items/vox-global-brand-redesign/vox-global-brand-redesign.component.html
@@ -32,7 +32,7 @@
       Content Audit & Competitive Analysis
     </h3>
     <p>
-      I had read <a class="work-body-link" target="_blank" href="https://www.contentstrategy.com/content-strategy-for-the-web">Kristina Halvorson's Content Strategy for the Web</a> in 2011 and leaned on this book as we started the project. We began by thoroughly auditing our own web content and information architecture. We also conducted a competitive analysis of other D.C. firms.
+      I had read <a class="basic-link" target="_blank" href="https://www.contentstrategy.com/content-strategy-for-the-web">Kristina Halvorson's Content Strategy for the Web</a> in 2011 and leaned on this book as we started the project. We began by thoroughly auditing our own web content and information architecture. We also conducted a competitive analysis of other D.C. firms.
     </p>
     <p>
       Some of our key findings:
@@ -88,7 +88,7 @@
     </p>
     <ul class="work-body-list">
       <li>
-        Avoid jargon. Move away from <a class="work-body-link" target="_blank" href="https://en.wikipedia.org/wiki/List_of_buzzwords">corporate buzzwords</a> towards <a class="work-body-link" target="_blank" href="https://en.wikipedia.org/wiki/List_of_plain_English_words_and_phrases">plain English</a>. Side note: I've always loved that Wikipedia aggregates these!
+        Avoid jargon. Move away from <a class="basic-link" target="_blank" href="https://en.wikipedia.org/wiki/List_of_buzzwords">corporate buzzwords</a> towards <a class="basic-link" target="_blank" href="https://en.wikipedia.org/wiki/List_of_plain_English_words_and_phrases">plain English</a>. Side note: I've always loved that Wikipedia aggregates these!
       </li>
       <li>
         Show, don't tell. We wanted to minimize the extent to which we wrote about ourselves whatsoever. As a company, we could use our best case studies to describe ourselves better than any words could.
@@ -104,7 +104,7 @@
       With an updated language & tone in mind, we began the process of overhauling our visual design holistically. We wanted the simplicity of our tone to extend to our visual representation.
     </p>
     <p>
-      You can see the updated brand live at <a class="work-body-link" target="_blank" href="http://voxglobal.com/">voxglobal.com</a>.
+      You can see the updated brand live at <a class="basic-link" target="_blank" href="http://voxglobal.com/">voxglobal.com</a>.
     </p>
   </section>
 
