--- a/src/app/work/work-items/vox-global-motion-design/vox-global-motion-design.component.html
+++ b/src/app/work/work-items/vox-global-motion-design/vox-global-motion-design.component.html
@@ -32,7 +32,7 @@
       Motion Design Practices
     </h3>
     <p>
-      I communicated with clients using storyboards made with Adobe Photoshop, Illustrator, and Sketch. All the videos were made first into animatics, then into final animations, using a mix of After Effects and Maxon Cinema 4d Studio. You can find more work from my video portfolio online at <a class="work-body-link" target="_blank" href="https://vimeo.com/petergcutler">vimeo.com/petergcutler</a>.
+      I communicated with clients using storyboards made with Adobe Photoshop, Illustrator, and Sketch. All the videos were made first into animatics, then into final animations, using a mix of After Effects and Maxon Cinema 4d Studio. You can find more work from my video portfolio online at <a class="basic-link" target="_blank" href="https://vimeo.com/petergcutler">vimeo.com/petergcutler</a>.
     </p>
   </section>
 
