--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,7 +1,6 @@
 // Colors
-  $elder-salmon: hsl(6, 78%, 57%);
-  $youthful-salmon: hsl(6, 78%, 66%);
-
+  $elder-salmon: hsl(6, 78%, 57%); // #e74d3c
+  $youthful-salmon: hsl(6, 78%, 66%); // #ec7265
 // Monochrome
 
   // Low-contrast, fails WCAG 2.0
