--- a/src/app/work/work-items/crowdskout-data-viz/crowdskout-data-viz.component.html
+++ b/src/app/work/work-items/crowdskout-data-viz/crowdskout-data-viz.component.html
@@ -11,7 +11,7 @@
       Building a System with D3 and AmCharts
     </h2>
     <p>
-      We built the system using a mix of <a class="work-body-link" target="_blank" href="https://d3js.org/">D3</a> and a library called <a class="work-body-link" target="_blank" href="https://www.amcharts.com/">amCharts</a>, also built on D3. The visualization component integrated with the Crowdskout app as an Angular component, coded with a mix of vanilla JavaScript and AngularJS.
+      We built the system using a mix of <a class="basic-link" target="_blank" href="https://d3js.org/">D3</a> and a library called <a class="basic-link" target="_blank" href="https://www.amcharts.com/">amCharts</a>, also built on D3. The visualization component integrated with the Crowdskout app as an Angular component, coded with a mix of vanilla JavaScript and AngularJS.
     </p>
     <p>
       Using a multi-step editor, a user could select an audience segment, criteria, and a graph type, and create a graph that could be customized or exported in a variety of ways.
