--- a/src/app/work/work-items/crowdskout-datetime/crowdskout-datetime.component.html
+++ b/src/app/work/work-items/crowdskout-datetime/crowdskout-datetime.component.html
@@ -11,7 +11,7 @@
       ISO8601 and Moment.js
     </h2>
     <p>
-      Using the <a class="work-body-link" target="_blank" href="https://momentjs.com/">Moment.js</a> library as a backbone for transforming and handling our date & datetime data, I built a custom component for accepting input data, transforming, and saving data in ISO8601 format. The component was built to be a flexible AngularJS directive that could easily shift implementations between date alone, or datetime, depending on varying needs.
+      Using the <a class="basic-link" target="_blank" href="https://momentjs.com/">Moment.js</a> library as a backbone for transforming and handling our date & datetime data, I built a custom component for accepting input data, transforming, and saving data in ISO8601 format. The component was built to be a flexible AngularJS directive that could easily shift implementations between date alone, or datetime, depending on varying needs.
     </p>
     <div class="work-body-image-grid">
       <app-image-viewer
