shift scroll animations to load and media query

--- a/src/app/work/work-items/crowdskout-datetime/crowdskout-datetime.component.html
+++ b/src/app/work/work-items/crowdskout-datetime/crowdskout-datetime.component.html
@@ -6,7 +6,7 @@
     </p>
   </app-work-header>
 
-  <section class="work-section" ngsReveal>
+  <section class="work-section">
     <h2 class="work-body-h2">
       ISO8601 and Moment.js
     </h2>
