--- a/src/app/work/work-items/uw-complex-systems/uw-complex-systems.component.html
+++ b/src/app/work/work-items/uw-complex-systems/uw-complex-systems.component.html
@@ -9,7 +9,7 @@
     </p>
   </app-work-header>
 
-  <section class="work-section" ngsReveal>
+  <section class="work-section">
     <h2 class="work-body-h2">
       Building Understanding
     </h2>
@@ -47,7 +47,7 @@
     </p>
   </section>
 
-  <section class="work-section" ngsReveal>
+  <section class="work-section">
     <h2 class="work-body-h2">
       Humanitarian Systems 101
     </h2>
@@ -73,7 +73,7 @@
     </p>
   </section>
 
-  <section class="work-section" ngsReveal>
+  <section class="work-section">
     <h3 class="work-body-h3">
       Move Slow and Break Nothing
     </h3>
@@ -85,7 +85,7 @@
     </p>
   </section>
 
-  <section class="work-section" ngsReveal>
+  <section class="work-section">
     <h2 class="work-body-h2">
       The VCA Model in Urban Settings
     </h2>
@@ -118,7 +118,7 @@
     </p>
   </section>
 
-  <section class="work-section" ngsReveal>
+  <section class="work-section">
     <h2 class="work-body-h2">
       Crafting a Research Plan
     </h2>
