--- a/src/app/work/work-items/uw-secure-storage/uw-secure-storage.component.html
+++ b/src/app/work/work-items/uw-secure-storage/uw-secure-storage.component.html
@@ -6,7 +6,7 @@
     </p>
   </app-work-header>
 
-  <section class="work-section" ngsReveal>
+  <section class="work-section">
     <h2 class="work-body-h2">
       Opportunity Space and Scope
     </h2>
@@ -26,7 +26,7 @@
     </p>
   </section>
 
-  <section class="work-section" ngsReveal>
+  <section class="work-section">
     <h2 class="work-body-h2">
       Understanding the Domain
     </h2>
@@ -50,7 +50,7 @@
     </p>
   </section>
 
-  <section class="work-section" ngsReveal>
+  <section class="work-section">
     <h3 class="work-body-h3">
       Putting Housing First
     </h3>
@@ -62,7 +62,7 @@
     </p>
   </section>
 
-  <section class="work-section" ngsReveal>
+  <section class="work-section">
     <h2 class="work-body-h2">
       Competitive Analysis
     </h2>
@@ -84,7 +84,7 @@
     </p>
   </section>
 
-  <section class="work-section" ngsReveal>
+  <section class="work-section">
     <h2 class="work-body-h2">
       Surveying Shelter Residents
     </h2>
@@ -114,7 +114,7 @@
     </p>
   </section>
 
-  <section class="work-section" ngsReveal>
+  <section class="work-section">
     <h2 class="work-body-h2">
       Visiting and Interviewing
     </h2>
@@ -152,7 +152,7 @@
     </p>
   </section>
 
-  <section class="work-section" ngsReveal>
+  <section class="work-section">
     <h2 class="work-body-h2">
       Synthesizing Personas and Early Design
     </h2>
@@ -189,7 +189,7 @@
     </ul>
   </section>
 
-  <section class="work-section" ngsReveal>
+  <section class="work-section">
     <h2 class="work-body-h2">
       Iterating on a Single Design
     </h2>
