--- a/src/app/work/work-items/vox-global-brand-redesign/vox-global-brand-redesign.component.html
+++ b/src/app/work/work-items/vox-global-brand-redesign/vox-global-brand-redesign.component.html
@@ -6,7 +6,7 @@
     </p>
   </app-work-header>
 
-  <section class="work-section" ngsReveal>
+  <section class="work-section">
     <h2 class="work-body-h2">
       Research & Discovery
     </h2>
@@ -27,7 +27,7 @@
     </div>
   </section>
 
-  <section class="work-section" ngsReveal>
+  <section class="work-section">
     <h3 class="work-body-h3">
       Content Audit & Competitive Analysis
     </h3>
@@ -50,7 +50,7 @@
     </ul>
   </section>
 
-  <section class="work-section" ngsReveal>
+  <section class="work-section">
     <h3 class="work-body-h3">
       Stakeholder Interviews & Focus Groups
     </h3>
@@ -70,7 +70,7 @@
     </ul>
   </section>
 
-  <section class="work-section" ngsReveal>
+  <section class="work-section">
     <h2 class="work-body-h2">
       Iterative Design
     </h2>
