--- a/src/app/work/work-items/crowdskout-data-viz/crowdskout-data-viz.component.html
+++ b/src/app/work/work-items/crowdskout-data-viz/crowdskout-data-viz.component.html
@@ -6,7 +6,7 @@
     </p>
   </app-work-header>
 
-  <section class="work-section" ngsReveal>
+  <section class="work-section">
     <h2 class="work-body-h2">
       Building a System with D3 and AmCharts
     </h2>
