--- a/src/scss/_work-body.scss
+++ b/src/scss/_work-body.scss
@@ -8,33 +8,37 @@
 }
 
 .work-section {
-  opacity: 0;
 
-  -webkit-animation: fadeInAndUp 800ms cubic-bezier(0.6, 0.2, 0.1, 1) 800ms forwards;
-  animation: fadeInAndUp 800ms cubic-bezier(0.6, 0.2, 0.1, 1) 800ms forwards;
-
-  /* verbose animation details follow
-  animation-duration: 800ms; // the duration of the animation
-  animation-timing-function: cubic-bezier(0.6, 0.2, 0.1, 1); // how the animation will behave
-  animation-delay: 800ms; // how long to delay the animation from starting
-  animation-iteration-count: 1; // how many times the animation will play
-  animation-name: fadeInAndUp; // the name of the animation
-  animation-fill-mode: forwards; // Pause the animation at 100%
-  */
-
-  // This will force the animation to re-run with the header
-  @include respond-to('large') {
-    @keyframes shiftInAndUp {
-        0% {
-            opacity: 0;
-        }
-        100% {
-            opacity: 1;
-        }
-    }
-
+  // TODO This continues to conflict with the opacity transform on ngx-gallery
+  &:first-of-type {
     opacity: 0;
-    animation: shiftInAndUp 800ms cubic-bezier(0.6, 0.2, 0.1, 1) 800ms forwards;
+
+    -webkit-animation: fadeInAndUp 800ms cubic-bezier(0.6, 0.2, 0.1, 1) 800ms forwards;
+    animation: fadeInAndUp 800ms cubic-bezier(0.6, 0.2, 0.1, 1) 800ms forwards;
+
+    /* verbose animation details
+    animation-duration: 800ms; // the duration of the animation
+    animation-timing-function: cubic-bezier(0.6, 0.2, 0.1, 1); // how the animation will behave
+    animation-delay: 800ms; // how long to delay the animation from starting
+    animation-iteration-count: 1; // how many times the animation will play
+    animation-name: fadeInAndUp; // the name of the animation
+    animation-fill-mode: forwards; // Pause the animation at 100%
+    */
+
+    // This will force the animation to re-run with the header
+    @include respond-to('large') {
+      @keyframes shiftInAndUp {
+          0% {
+              opacity: 0;
+          }
+          100% {
+              opacity: 1;
+          }
+      }
+
+      opacity: 0;
+      animation: shiftInAndUp 800ms cubic-bezier(0.6, 0.2, 0.1, 1) 800ms forwards;
+    }
   }
 
   font-family: $body-font;
