--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,28 +1,28 @@
 // Colors
-  $elder-salmon: hsl(6, 78%, 57%); // #e74d3c
-  $youthful-salmon: hsl(6, 78%, 66%); // #ec7265
+  $elder-salmon: hsla(6, 78%, 57%, 1); // #e74d3c
+  $youthful-salmon: hsla(6, 78%, 66%, 1); // #ec7265
 // Monochrome
 
   // Low-contrast, fails WCAG 2.0
-  $white: hsl(0, 0%, 100%);
-  $white-smoke: hsl(0, 0%, 92%);
-  $wild-sand: hsl(0, 0%, 85%);
-  $silver: hsl(0, 0%, 78%);
-  $chalice: hsl(0, 0%, 71%);
-  $mercury: hsl(0, 0%, 64%);
+  $white: hsla(0, 0%, 100%, 1);
+  $white-smoke: hsla(0, 0%, 92%, 1);
+  $wild-sand: hsla(0, 0%, 85%, 1);
+  $silver: hsla(0, 0%, 78%, 1);
+  $chalice: hsla(0, 0%, 71%, 1);
+  $mercury: hsla(0, 0%, 64%, 1);
 
   // Partially pass WCAG 2.0
-  $chalice: hsl(0, 0%, 57%);
-  $dove-gray: hsl(0, 0%, 50%);
-  $charcoal: hsl(0, 0%, 40%);
+  $chalice: hsla(0, 0%, 57%, 1);
+  $dove-gray: hsla(0, 0%, 50%, 1);
+  $charcoal: hsla(0, 0%, 40%, 1);
 
   // Fully passes WCAG 2.0
-  $mine-shaft: hsl(0, 0%, 30%);
-  $cool-shirt: hsl(0, 0%, 25%);
-  $nightrider: hsl(0, 0%, 22%);
-  $obsidian: hsl(0, 0%, 18%);
-  $nero: hsl(0, 0%, 15%);
-  $black: hsl(0, 0%, 0%);
+  $mine-shaft: hsla(0, 0%, 30%, 1);
+  $cool-shirt: hsla(0, 0%, 25%, 1);
+  $nightrider: hsla(0, 0%, 22%, 1);
+  $obsidian: hsla(0, 0%, 18%, 1);
+  $nero: hsla(0, 0%, 15%, 1);
+  $black: hsla(0, 0%, 0%, 1);
 
 // In Use
 
