add mosaic display and a broken mosaic create

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,10 +1,7 @@
-<div class="dashboard-content">
-  <img
-    class="dashboard-image"
-    src="../assets/images/dashboard/2453195001_67396bbc34_o.jpg"
-    alt="water-surface">
+<app-nav></app-nav>
 
-  <div class="welcome">
-    <!-- It is not down in any map -->
-  </div>
-</div>
+<main class="main-window" role="main">
+  <router-outlet></router-outlet>
+</main>
+
+<app-article-footer></app-article-footer>
