--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -24,6 +24,7 @@
 @import './work-body';
 
 // Pages
+@import './mosaic-display';
 @import './dashboard';
 @import './about';
 @import './work-list';
