--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 @import url('https://fonts.googleapis.com/css?family=Rubik');
 @import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url('https://fonts.googleapis.com/css?family=Share+Tech+Mono');
 
 // Core, do not re-order
 @import './resets';
@@ -25,6 +26,7 @@
 
 // Pages
 @import './mosaic-display';
+@import './mosaic-create';
 @import './dashboard';
 @import './about';
 @import './work-list';
